RESOLVED FIXED302790
REGRESSION (303218@main): fast/webgpu/nocrash/fuzz-293750.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=302790
Summary REGRESSION (303218@main): fast/webgpu/nocrash/fuzz-293750.html is a flaky fai...
Geoffrey Garen
Reported 2025-11-19 08:42:59 PST
...
Attachments
Geoffrey Garen
Comment 1 2025-11-19 08:43:01 PST
Geoffrey Garen
Comment 2 2025-11-19 08:45:11 PST
Alexey Proskuryakov
Comment 3 2025-11-19 10:27:16 PST
*** Bug 302789 has been marked as a duplicate of this bug. ***
EWS
Comment 4 2025-11-19 10:46:39 PST
Committed 303270@main (098b4559d5e6): <https://commits.webkit.org/303270@main> Reviewed commits have been landed. Closing PR #54183 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.