[Regression 303218@main] fast/webgpu/nocrash/fuzz-293750.html is a flaky failure (302789) https://bugs.webkit.org/show_bug.cgi?id=302790 rdar://165051016

Reviewed by Mike Wyrzykowski.

Speculative fix: ~Sampler() had a tiny race condition where it would check a weak
and then load the weak separately. This could in theory trigger the
RELEASE_ASSERT.

Changed ~Sampler() to load the weak into a strong local and use the local instead.

* Source/WebGPU/WebGPU/Sampler.mm:
(WebGPU::Sampler::~Sampler):

Canonical link: https://commits.webkit.org/303270@main